# yabridge-fix

./: .gitignore  CLAUDE.md  fixes.md  meson.build  project-status.md  readme-fixes.md  terminaloutput  terminaloutput-brandthatworks
src/common/: istream_impl.h  protocol.h  shared_memory.cpp  socket.cpp  socket.h
src/native/: plugin_factory.h  plugin_proxy.cpp  plugin_proxy.h  vst3_entry.cpp
src/wine-host/: audio_processor.h  component_handler.cpp  component_handler.h  gui_event_receiver.h  host_application.h  host_main.cpp  plugin_instance.h  vst3_host.h  wine_socket_client.h
vstbridge/: .gitignore  CLAUDE.md  README.md  install.sh  meson.build  meson_options.txt  package.sh
vstbridge/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  setup_help.yml
vstbridge/.github/workflows/: build.yml
vstbridge/src/chainloader/: clap-chainloader.cpp  utils.cpp  utils.h  vst2-chainloader.cpp  vst3-chainloader.cpp
vstbridge/src/common/: audio-shm.cpp  audio-shm.h  configuration.cpp  configuration.h  linking.cpp  linking.h  mutual-recursion.h  notifications.cpp  notifications.h  plugins.cpp  plugins.h  process.cpp  process.h  toml++.h  utils.cpp  utils.h  vst24.h
vstbridge/src/common/bitsery/ext/: ghc-path.h  in-place-optional.h  in-place-variant.h  message-reference.h  native-pointer.h
vstbridge/src/common/bitsery/traits/: small-vector.h
vstbridge/src/common/communication/: clap.h  common.cpp  common.h  vst2.cpp  vst2.h  vst3.h
vstbridge/src/common/config/: config.h.in  meson.build  version.h.in
vstbridge/src/common/logging/: clap.cpp  clap.h  common.cpp  common.h  vst2.cpp  vst2.h  vst3.cpp  vst3.h
vstbridge/src/common/serialization/: clap.h  common.h  vst2.cpp  vst2.h  vst3.h
vstbridge/src/common/serialization/clap/: audio-buffer.h  events.cpp  events.h  host.cpp  host.h  plugin.cpp  plugin.h  process.cpp  process.h  stream.cpp  stream.h  version.h
vstbridge/src/common/serialization/clap/ext/: audio-ports-config.cpp  audio-ports-config.h  audio-ports.cpp  audio-ports.h  gui.h  latency.h  log.h  note-name.cpp  note-name.h  note-ports.cpp  note-ports.h  params.cpp  params.h  render.h  state.h  tail.h  voice-info.h
vstbridge/src/common/serialization/clap/factory/: plugin-factory.h
vstbridge/src/common/serialization/vst3/: attribute-list.cpp  attribute-list.h  base.cpp  base.h  bstream.cpp  bstream.h  component-handler-proxy.cpp  component-handler-proxy.h  connection-point-proxy.cpp  connection-point-proxy.h  context-menu-proxy.cpp  context-menu-proxy.h  context-menu-target.cpp  context-menu-target.h  event-list.cpp  event-list.h  host-context-proxy.cpp  host-context-proxy.h  message.cpp  message.h  param-value-queue.cpp  param-value-queue.h  parameter-changes.cpp  parameter-changes.h  physical-ui-map-list.cpp  physical-ui-map-list.h  plug-frame-proxy.cpp  plug-frame-proxy.h  plug-view-proxy.cpp  plug-view-proxy.h  plugin-factory-proxy.cpp  plugin-factory-proxy.h  plugin-proxy.cpp  plugin-proxy.h  process-data.cpp  process-data.h
vstbridge/src/common/serialization/vst3-impls/: context-menu-target.h
vstbridge/src/common/serialization/vst3/component-handler/: component-handler-2.cpp  component-handler-2.h  component-handler-3.cpp  component-handler-3.h  component-handler-bus-activation.cpp  component-handler-bus-activation.h  component-handler.cpp  component-handler.h  progress.cpp  progress.h  unit-handler-2.cpp  unit-handler-2.h  unit-handler.cpp  unit-handler.h
vstbridge/src/common/serialization/vst3/context-menu/: context-menu.cpp  context-menu.h
vstbridge/src/common/serialization/vst3/host-context/: host-application.cpp  host-application.h  plug-interface-support.cpp  plug-interface-support.h
vstbridge/src/common/serialization/vst3/plug-frame/: plug-frame.cpp  plug-frame.h
vstbridge/src/common/serialization/vst3/plug-view/: parameter-finder.cpp  parameter-finder.h  plug-view-content-scale-support.cpp  plug-view.cpp  (+2 more)
vstbridge/src/plugin/: clap-plugin.cpp  host-process.cpp  host-process.h  utils.cpp  utils.h  vst2-plugin.cpp  vst3-plugin.cpp
vstbridge/src/plugin/bridges/: clap.cpp  clap.h  common.h  vst2.cpp  vst2.h  vst3.cpp  vst3.h
vstbridge/src/plugin/bridges/clap-impls/: plugin-factory-proxy.cpp  plugin-factory-proxy.h  plugin-proxy.cpp  plugin-proxy.h
vstbridge/src/plugin/bridges/vst3-impls/: plug-view-proxy.cpp  plug-view-proxy.h  plugin-factory-proxy.cpp  plugin-factory-proxy.h  plugin-proxy.cpp  plugin-proxy.h
vstbridge/src/wine-host/: editor.cpp  editor.h  host.cpp  use-linux-asio.h  utils.cpp  utils.h  xdnd-proxy.cpp  xdnd-proxy.h
vstbridge/src/wine-host/bridges/: clap.cpp  clap.h  common.cpp  common.h  group.cpp  group.h  vst2.cpp  vst2.h  vst3.cpp  vst3.h
vstbridge/src/wine-host/bridges/clap-impls/: host-proxy.cpp  host-proxy.h
vstbridge/src/wine-host/bridges/vst3-impls/: component-handler-proxy.cpp  component-handler-proxy.h  connection-point-proxy.cpp  connection-point-proxy.h  context-menu-proxy.cpp  context-menu-proxy.h  host-context-proxy.cpp  host-context-proxy.h  plug-frame-proxy.cpp  plug-frame-proxy.h
vstbridge/tools/vstbridgectl/: Makefile  README.md  install.sh  vstbridgectl-gtk.desktop
vstbridge/tools/vstbridgectl/src/: actions.cpp  actions.h  config.cpp  config.h  files.cpp  files.h  gui_main.cpp  main.cpp  symbols.cpp  symbols.h  types.h  util.cpp  util.h  vst3_moduleinfo.cpp  vst3_moduleinfo.h
vstbridge/tools/vstbridgectl/src/actions/: blacklist.cpp  blacklist.h
vstbridge/tools/vstbridgectl/src/gui/: app_window.cpp  app_window.h
yabridge-5.1.1/: cross-wine.conf  meson.build
yabridge-5.1.1/src/common/: configuration.h  frame_shm.cpp  frame_shm.h
yabridge-5.1.1/src/plugin/: host-process.cpp  meson.build
yabridge-5.1.1/src/plugin/bridges/vst3-impls/: plug-view-proxy.cpp  plug-view-proxy.h
yabridge-5.1.1/src/wine-host/: editor.cpp  editor.h  gdi_capture.cpp  gdi_capture.h  meson.build
yabridge-5.1.1/src/wine-host/bridges/: clap.cpp  vst3.cpp
yabridge-5.1.1/tools/migration/: migrate-reaper.py
yabridge-5.1.1/tools/yabridgectl/src/gui/: app_window.cpp  app_window.h
(+47 files in other folders)
